fix spacing below links in navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
 
 .main {
     flex-grow: 1;
-    padding-top: 4.5rem;
+    padding-top: 4.75rem;
 }
 
 main {
